# qt-linux-monitor

./: .gitignore  CMakeLists.txt  processinformationworker.cpp  system-monitor.desktop
docker/scripts/: monitor_docker_run.sh
